# hwcc

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TECH_SPEC.md  pyproject.toml
.claude/agents/: code-reviewer.md  research.md
.claude/commands/: execute.md  myplan.md  quick.md  research.md  review.md  status.md  test.md  wrapup.md
.claude/hooks/: post-write-reminder.sh  session-stop.sh
.claude/rules/: git-workflow.md  python-patterns.md
docs/: FUTURE.md  STRATEGY.md
docs/plans/: PLAN_ARCHITECTURE_SEAMS.md  PLAN_BENCH_CREDIBILITY.md  PLAN_BENCH_DATASHEET.md  PLAN_BENCH_SVD_LOOKUP_AND_HYBRID.md  PLAN_BENCH_TEST_HARDENING.md  PLAN_BSP_DOMAIN_SUPPORT.md  PLAN_CHROMADB_EMBEDDER.md  PLAN_CHROMADB_STORAGE.md  PLAN_CHUNKING_ENGINE.md  PLAN_CLI_SEARCH.md  PLAN_COMPILE_CLI.md  PLAN_CONTENT_TYPE_AND_RESET_VALUES.md  PLAN_EMBEDDING_ENGINE.md  PLAN_EMBEDGENIUS_IMPROVEMENTS.md  PLAN_FILE_TYPE_DETECTION.md  PLAN_HOT_CONTEXT.md  PLAN_HWBENCH.md  PLAN_HWCC_ADD.md  PLAN_HWCC_REMOVE.md  PLAN_HWCC_STATUS.md  PLAN_MARKDOWN_TEXT_PARSER.md  PLAN_MCP_CLI.md  PLAN_MCP_SERVER.md  PLAN_OUTPUT_GENERATORS.md  PLAN_PDF_MULTIMODAL.md  PLAN_PDF_PARSER.md  PLAN_PERIPHERAL_CONTEXT.md  PLAN_PHASE0_FOUNDATION.md  (+9 more)
scripts/: generate_svd_catalog.py
tests/: conftest.py  test_bench_dataset.py  test_bench_providers.py  test_bench_report.py  test_bench_runner.py  test_bench_scoring.py  test_bench_svd_lookup.py  test_catalog.py  test_chunk.py  test_cli.py  test_cli_add.py  test_cli_pdf_parser_selection.py  test_compile_citations.py  test_compile_hot_context.py  test_compile_output.py  test_compile_peripheral.py  test_compile_relevance.py  test_compile_templates.py  test_config.py  test_config_ingest_vision.py  test_detect.py  test_embed.py  test_ingest_devicetree.py  test_ingest_markdown.py  test_ingest_pdf.py  test_ingest_pdf_docling.py  test_ingest_svd.py  test_ingest_text.py  test_manifest.py  test_pipeline.py  test_project.py  test_registry.py  test_search.py  test_serve_mcp.py  test_store.py  test_types.py  test_vision_providers.py
(+76 files in other folders)
