[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hwcc"
version = "0.1.0"
description = "Hardware Context Compiler — transforms hardware docs into AI-optimized context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Noel" },
]
keywords = ["embedded", "hardware", "context", "ai", "svd", "datasheet", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0",
    "cmsis-svd>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
hwcc = "hwcc.cli:app"

[project.urls]
Homepage = "https://github.com/noelgraf/hwcc"
Repository = "https://github.com/noelgraf/hwcc"

[tool.hatch.build.targets.wheel]
packages = ["src/hwcc"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["hwcc"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
